--- a/BlazorElements/Information/Images/RolingImages.razor.css
+++ b/BlazorElements/Information/Images/RolingImages.razor.css
@@ -1,39 +1,62 @@
 ﻿.container {
     position: relative;
+    text-shadow: 1px 1px 1px white;
+    color:black;
+}
+.image {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.animate0{
+    animation: imageUpdate 1s;
+}
+.animate1{
+    animation: imageUpdate 1s;
 }
 
 .top-left {
+    text-align: left;
     position: absolute;
-    text-align:left;
     top: 8px;
     left: 16px;
 }
 
 .top-right {
-    position: absolute;
     text-align: right;
+    position: absolute;
     top: 8px;
     right: 16px;
 }
 
 .bottom-left {
+    text-align: left;
     position: absolute;
-    text-align:left;
     bottom: 8px;
     left: 16px;
 }
 
 .bottom-right {
-    position: absolute;
     text-align: right;
+    position: absolute;
     bottom: 8px;
     right: 16px;
 }
 
 .centered {
-    position: absolute;
     text-align: center;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+@keyframes imageUpdate{
+    0% {
+        transform: translateX(100%)
+    }
+
+    100% {
+        transform: translateX(0)
+    }
 }
