Fix labeling issue

--- a/BlazorElements/Information/Images/RolingImages.razor
+++ b/BlazorElements/Information/Images/RolingImages.razor
@@ -11,11 +11,11 @@
         }
         @if (BottomLeft != null)
         {
-            <div class="bottom-right">@BottomLeft(Images[index])</div>
+            <div class="bottom-left">@BottomLeft(Images[index])</div>
         }
         @if (BottomRight != null)
         {
-            <div class="bottom-left">@BottomRight(Images[index])</div>
+            <div class="bottom-right">@BottomRight(Images[index])</div>
         }
         @if (Center != null)
         {
